Commit at 12.01PM

--- a/settings/internal/com.kms.katalon.execution.webui.properties
+++ b/settings/internal/com.kms.katalon.execution.webui.properties
@@ -1,2 +1,8 @@
-#Fri Jun 26 12:29:04 IST 2020
+#Wed Jul 01 23:51:19 IST 2020
 execution.default.selectingCapturedObjectSelectorMethod="XPATH"
+execution.default.imageRecognitionEnabled=false
+execution.default.webUi.enablePageLoadTimeout=false
+execution.default.webUi.pageLoadTimeout=30
+execution.default.webUi.ignorePageLoadTimeOutException=false
+execution.default.webUi.actionDelay=0
+execution.default.waitForIEHanging=600
